tests/files/type_checker_tests/should_fail/038.cmdr
//Should fail when moduloing incompatible types
x = 3 % false;
